hidWord generated and represented in html

--- a/index.html
+++ b/index.html
@@ -33,10 +33,10 @@
 					<div align="center" class="col">
 		<!-- Insert guess/word lines here -->
 					 	<h2>Current Word:</h2>
-					 	<span style="red" id="word"></span>
+					 	<p id="word"></p>
 		<!-- Insert guessed letters here -->
 					 	<h3>Letters Used:</h4>
-							<p id="used"></p>
+							<p id="used-letter"></span></p>
 		<!-- Insert guess countdown here -->
 						<h4>Remaining Guesses: <span id="guesses-left"></span></h3>
 		<!-- Insert overall game wins here -->
