Stuck on concat onkeyup input into new array

--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
 					 	<p id="word"></p>
 		<!-- Insert guessed letters here -->
 					 	<h3>Letters Used:</h4>
-							<p id="used-letter"></span></p>
+							<p id="letter-guessed"></p>
 		<!-- Insert guess countdown here -->
 						<h4>Remaining Guesses: <span id="guesses-left"></span></h3>
 		<!-- Insert overall game wins here -->
