--- a/index.html
+++ b/index.html
@@ -48,6 +48,7 @@
 
 
 		<!-- Link to Javascript -->
+		<script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.1.0/jquery.min.js"></script>
 		<script src="assets/javascript/game.js"></script>
 	</body>
 
